import services from excel

--- a/accounting/templates/accounting/financial-event.html
+++ b/accounting/templates/accounting/financial-event.html
@@ -5,6 +5,15 @@
     <div class="col-md-12">
         {% include "accounting/includes/financial-event-app/card.html" %}
     </div>
+    <div class="col-md-4">
+        {% include "attachments/includes/downloads-app/template.html" %}
+    </div>
+    <div class="col-md-4">
+        {% include "attachments/includes/links-app/template.html" %}
+    </div>
+    <div class="col-md-4">
+        {% include "attachments/includes/comments-app/template.html" %}
+    </div>
      
 
     <div class="col-md-12 ">
