--- a/accounting/templates/accounting/financial-document-line.html
+++ b/accounting/templates/accounting/financial-document-line.html
@@ -3,19 +3,34 @@
   <div class="col-md-12">
     <div class="card">
       <div class="card-body">
+        <div>{{financial_document_line.title}}</div>
         <div>
-            {{financial_document_line.title}}
-            
-        </div>
-        <div>
-            <a href="{{financial_document_line.financial_document.get_absolute_url}}">{{financial_document_line.financial_document.title}}</a>
+          <a
+            href="{{financial_document_line.financial_document.get_absolute_url}}"
+            >{{financial_document_line.financial_document.title}}</a
+          >
         </div>
 
-         <div>
-            <a href="{{financial_document_line.financial_event.get_absolute_url}}">{{financial_document_line.financial_event.title}}</a>
-        </div> 
-    </div>
+        <div>
+          <a href="{{financial_document_line.financial_event.get_absolute_url}}"
+            >{{financial_document_line.financial_event.title}}</a
+          >
+        </div>
+      </div>
     </div>
   </div>
+
+  <div class="col-md-4">
+    {% include "attachments/includes/downloads-app/template.html" %}
+  </div>
+  <div class="col-md-4">
+    {% include "attachments/includes/links-app/template.html" %}
+  </div>
+  <div class="col-md-4">
+    {% include "attachments/includes/comments-app/template.html" %}
+  </div>
 </div>
-{% endblock content %} {% block script %} {% endblock script %}
+{% endblock content %}
+{% block script %} 
+{% include "core/includes/page-app/script.html" %} 
+{% endblock script %}
