--- a/accounting/templates/accounting/includes/financial-document-lines-app/template.html
+++ b/accounting/templates/accounting/includes/financial-document-lines-app/template.html
@@ -54,6 +54,9 @@
           <div v-if="financial_document_lines.length>0">
             <table class="table table-striped rtl">
               <thead>
+                <th>
+                  ردیف
+                </th>
                 <th>شرح</th>
                 {% if not financial_document %}
                 <th>سند</th>
@@ -79,8 +82,11 @@
                 <th></th>
               </thead>
               <tbody>
-                <tr v-for="financial_document_line in financial_document_lines">
-                  <td>
+                <tr v-for="(financial_document_line, index) in financial_document_lines" :key="financial_document_line.id">
+                <td>
+                   <span v-text="index + 1"></span>
+                </td>
+                <td>
                    
                     
                     <div>
@@ -194,10 +200,11 @@
                   </td>
                 </tr>
                 <tr>
-                  <td colspan="8">&nbsp;</td>
+                  <td colspan="9">&nbsp;</td>
                 </tr>
               </tbody>
               <tfoot>
+                <th></th>
                 <th
                   colspan="{% if not financial_event and not account and not financial_document %}6{% else %}5{% endif %}"
                 >
