--- a/accounting/templates/accounting/includes/products-app/template.html
+++ b/accounting/templates/accounting/includes/products-app/template.html
@@ -21,7 +21,7 @@
             <div class="row">
                 <div class="col">
 
-                    <input placeholder="کالای جدید" class="form-control d-inline" required type="text" v-model="title">
+                    <input placeholder="کالای جدید" class="form-control d-inline" required type="text" v-model="new_product_title">
                 </div>
 
                 <div class="col-12">
