--- a/accounting/templates/accounting/includes/product-app/card-contents.html
+++ b/accounting/templates/accounting/includes/product-app/card-contents.html
@@ -1,6 +1,7 @@
 <h5>
   <a href="{% url 'accounting:product' pk=product.id %}">
-    product
+   کالا :  {{product.title}}
   </a>
 </h5>
+
 {% include "accounting/includes/invoice-line-item-app/card-contents.html" %}
