--- a/accounting/templates/accounting/includes/product-app/card.html
+++ b/accounting/templates/accounting/includes/product-app/card.html
@@ -1,15 +1,14 @@
 <div class="card">
-    <div class="card-header">
-        <h5>
-            {{product.title}}
-        </h5>
+  <div class="card-header">
+    <h5>{{product.title}}</h5>
+  </div>
 
+  <div class="card-body">
+    {% for product_category in product.category_set.all %}
+    <div class="rtl text-right">
+      دسته بندی : {{product_category.get_breadcrumb_link|safe}}
     </div>
-
-    <div class="card-body">
- 
-        {% include "accounting/includes/product-app/card-contents.html" %}
-        
-    </div>
-
+    {% endfor %}
+    {% include "accounting/includes/product-app/card-contents.html" %}
+  </div>
 </div>
