--- a/accounting/templates/accounting/product.html
+++ b/accounting/templates/accounting/product.html
@@ -7,6 +7,9 @@
   <div class="col-md-12">
     {% include "accounting/includes/invoice-line-item-units-app/template.html" %}
   </div>
+  <div class="col-md-12">
+    {% include "accounting/includes/invoice-lines-app/template.html" %}
+  </div>
   <div class="col-md-4">
     {% include "attachments/includes/downloads-app/template.html" %}
   </div>
