--- a/accounting/templates/accounting/includes/invoice-app/card.html
+++ b/accounting/templates/accounting/includes/invoice-app/card.html
@@ -4,7 +4,21 @@
 
       <h5>{{invoice.title}}</h5>
         <h5>{{invoice.sum_total|to_price}} {{CURRENCY}}</h5>
-       
+       {% for project in invoice.project_set.all %}
+       <h5>
+          <small class="text-muted">
+            پروژه
+          </small> 
+         <a
+         target="_blank"
+         href="{{project.get_absolute_url}}"
+         class="text-info mx-2"
+         >
+          
+         {{project.title}}
+        </a>
+      </h5>
+       {% endfor %}
         <a
           target="_blank"
           href="{{invoice.get_edit_url}}"
