--- a/school/templates/school/includes/add-school-app/script.html
+++ b/school/templates/school/includes/add-school-app/script.html
@@ -1,30 +1,17 @@
 {% include "accounting/includes/account-app/select-script.html" %}
 <script>
-  let add_meal_app = new Vue({
-    el: "#add-meal-app",
+  let add_school_app = new Vue({
+    el: "#add-school-app",
     data: {
-    title: "",
-    event_date: current_date,
-    event_time: "00:00:00",
-    event_datetime: current_datetime,
-    bedehkar: false ,
-    bestankar: false ,  
-    bedehkar_code: "0", 
-    bestankar_code: "0",   
+    name: "", 
+    account_code:'0',
+    account:{},
     },
 
     components: {
       DatePicker: VuePersianDatetimePicker,
     },
     methods: {
-      
-
-      swap: function () {
-        let bed = add_meal_app.bedehkar;
-        let bes = add_meal_app.bestankar;
-        add_meal_app.bedehkar = bes;
-        add_meal_app.bestankar = bed;
-      },
       to_price_colored: function (vall) {
         let colorr = "primary";
         if (vall > 0) {
@@ -43,58 +30,32 @@
       to_price: function (vall) {
         return to_price(vall) + " {{CURRENCY}}";
       },
-
-      select_bedehkar: function () {
-          console.log(add_meal_app.bedehkar);
-          select_account_by_code(add_meal_app.bedehkar_code).done((data) => {
-              add_meal_app.bedehkar = data.account;
-              
+      select_account: function () {
+          console.log(add_school_app.account);
+          select_account_by_code(add_school_app.account_code).done((data) => {
+              add_school_app.account = data.account;
               if (data.result === "SUCCEED") {
-                  console.log(data.account);
-            if (data.account.nature === "{{ONLY_BESTANKAR}}") {
-                return;
-            }
-            add_meal_app.bedehkar = data.account;
-        } else {
-            add_meal_app.bedehkar = false
-        }
-        });
-    },
-
-    select_bestankar: function () {
-          console.log(add_meal_app.bestankar);
-        select_account_by_code(add_meal_app.bestankar_code).done((data) => {
-          console.log(data);
-          if (data.result === "SUCCEED") {
-              console.log(data.account);
-              if (data.account.nature === "{{ONLY_BEDEHKAR}}") {
-                  return;
-                }
-                
-                add_meal_app.bestankar = data.account;
-          } else {
-            add_meal_app.bestankar = false
-          }
+                  add_school_app.account = data.account;
+              } else {
+                  add_school_app.account = {}
+              }
         });
       },
-
-      add_meal: function () {
+      add_school: function () {
         let payload = {
           csrfmiddlewaretoken: csrfmiddlewaretoken,
-          title: this.title,
-          event_datetime: this.event_date+" "+this.event_time,
-          bedehkar_id: this.bedehkar.id,
-          bestankar_id: this.bestankar.id,
+          name: this.name,
+          account_id: this.account.id,
         };
 
         console.log(payload);
-        let url = "{% url 'chef:add_meal' %}";
+        let url = "{% url 'school:add_school' %}";
         let posting = $.post(url, payload);
         posting.done((data) => {
           console.log(data);
           if (data.result === "SUCCEED") {
-            if (typeof meals_app != "undefined") {
-              meals_app.meals.push(data.meal);
+            if (typeof schools_app != "undefined") {
+              schools_app.schools.push(data.school);
             }
           }
         });
