--- a/school/templates/school/index.html
+++ b/school/templates/school/index.html
@@ -14,6 +14,20 @@
       <h6 class="text-center">آموزشگاه ها</h6>
     </a>
   </div>
+
+
+  <div class="col-6 col-md-3 col-lg-2 text-center my-3">
+    <a href="{% url 'school:courses' %}">
+      <img
+        src="{% static 'school/img/logo.png' %}"
+        width="64em"
+        class="mb-2"
+        alt=""
+      />
+      <h6 class="text-center">واحد های درسی</h6>
+    </a>
+  </div>
+
     
 </div>
 {% endblock content %}
