--- a/authentication/templates/authentication/includes/person-app/select-script.html
+++ b/authentication/templates/authentication/includes/person-app/select-script.html
@@ -4,3 +4,27 @@
         return $.post("{% url 'authentication:select_person' %}", payload2)
     }
 </script>
+
+
+<script>
+    let select_person_app=new Vue({
+        el:"#select-person-app",
+        data:{
+            person_id:0,
+            person:{},
+        },
+        methods:{
+            select_person:function(){
+                select_person_by_id(select_person_app.person_id).done(data=>{
+                    if(data.result==='SUCCEED'){
+                        select_person_app.person=data.person
+                    }
+                    else{
+                        select_person_app.person={}
+
+                    }
+                })
+            }
+        }
+    })
+</script>
