--- a/authentication/templates/authentication/includes/profile-app/select-script.html
+++ b/authentication/templates/authentication/includes/profile-app/select-script.html
@@ -4,3 +4,25 @@
         return $.post("{% url 'authentication:select_profile' %}", payload2)
     }
 </script>
+<script>
+    let select_profile_app=new Vue({
+        el:"#select-profile-app",
+        data:{
+            profile_id:0,
+            profile:{},
+        },
+        methods:{
+            select_profile:function(){
+                select_profile_by_id(select_profile_app.profile_id).done(data=>{
+                    if(data.result==='SUCCEED'){
+                        select_profile_app.profile=data.profile
+                    }
+                    else{
+                        select_profile_app.profile={}
+
+                    }
+                })
+            }
+        }
+    })
+</script>
