--- a/attachments/templates/attachments/includes/comments-app/component.html
+++ b/attachments/templates/attachments/includes/comments-app/component.html
@@ -10,6 +10,19 @@
             <span class="farsi small text-secondary mr-2 text-right" v-text="comment.persian_date_added"></span>
         </div>
         <div class="alert alert-light farsi  text-right fade show" role="alert">
+            
+            {% if not page %}
+            <a :href="comment.page.get_absolute_url"  class="mt-3">
+
+                <div class="media">
+                    <img :src="comment.page.thumbnail" class="rounded" width="32" alt="">
+                    <div class="media-body mr-2">
+                        <h6 v-text="comment.page.title"></h6>
+                    </div>
+                </div>
+            </a>
+            {% endif %}
+                
             <div class="small farsi text-dark text-right" v-html="comment.comment">
             </div>
             <div>
