--- a/accounting/templates/accounting/financial-event.html
+++ b/accounting/templates/accounting/financial-event.html
@@ -16,6 +16,9 @@
     </div>
      
 
+    <div class="col-md-12">
+        {% include "core/includes/page-thumbnail-header-app/template.html" %}
+    </div>
     <div class="col-md-12 ">
         {% include "accounting/includes/financial-document-lines-app/template.html" %}
     </div>
