--- a/attachments/templates/attachments/includes/links-app/template.html
+++ b/attachments/templates/attachments/includes/links-app/template.html
@@ -23,6 +23,17 @@
 
 
                 <div v-for="link in links" class="mb-3">
+                     {% if not page %}
+                    <a :href="link.page.get_absolute_url" class="mt-3">
+
+                        <div class="media">
+                            <img :src="link.page.thumbnail" class="rounded" width="32" alt="">
+                            <div class="media-body mr-2">
+                                <h6 v-text="link.page.title"></h6>
+                            </div>
+                        </div>
+                    </a>
+                    {% endif %}
                     <div class="row">
                       
 
