--- a/accounting/templates/accounting/includes/add-invoice-app/script.html
+++ b/accounting/templates/accounting/includes/add-invoice-app/script.html
@@ -85,6 +85,7 @@
           event_datetime: this.event_date+" "+this.event_time,
           bedehkar_id: this.bedehkar.id,
           bestankar_id: this.bestankar.id,
+          amount:0,
         };
 
         console.log(payload);
