--- a/accounting/templates/accounting/includes/import-products-from-excel-app/script.html
+++ b/accounting/templates/accounting/includes/import-products-from-excel-app/script.html
@@ -32,7 +32,12 @@
                             console.log(data)
                             if (data.result === 'SUCCEED') { 
                                 show_message(import_products_from_excel_app,"موفقیت آمیز",data.message,"success",10000)   
-
+                                if(typeof products_app != "undefined"){
+                                    data.products.forEach(product => {
+                                        products_app.products.push(product)
+                                        
+                                    });
+                                }
                             }
                             if (data.result != 'SUCCEED') { 
                                 show_message(import_products_from_excel_app,"خطا",data.message,"danger",10000)   
