--- a/core/templates/core/includes/page-app/script.html
+++ b/core/templates/core/includes/page-app/script.html
@@ -7,4 +7,5 @@
 
 {% include "attachments/includes/comments-app/script.html" %}
 {% include "attachments/includes/links-app/script.html" %}
+{% include "attachments/includes/images-app/script.html" %}
 {% include "attachments/includes/downloads-app/script.html" %}
