--- a/accounting/templates/accounting/financial-event.html
+++ b/accounting/templates/accounting/financial-event.html
@@ -14,6 +14,9 @@
     <div class="col-md-4">
         {% include "attachments/includes/comments-app/template.html" %}
     </div>
+    <div class="col-md-12">
+        {% include "attachments/includes/images-app/template.html" %}
+    </div>
      
 
     <div class="col-md-12">
