--- a/accounting/templates/accounting/invoice.html
+++ b/accounting/templates/accounting/invoice.html
@@ -13,6 +13,7 @@
         {% include "accounting/includes/invoice-lines-app/template.html" %}
     </div>
 
+
      <div class="col-md-12 ">
         {% include "accounting/includes/financial-document-lines-app/template.html" %}
     </div>
@@ -31,6 +32,10 @@
       </div>
       <div class="col-md-4">
         {% include "attachments/includes/comments-app/template.html" %}
+      </div>
+
+      <div class="col-md-12">
+        {% include "attachments/includes/images-app/template.html" %}
       </div>
 
 </div>
