--- a/attachments/templates/attachments/includes/images-app/script.html
+++ b/attachments/templates/attachments/includes/images-app/script.html
@@ -1,14 +1,14 @@
 <script>
-    let url_add_page_image = "{% url 'core:add_page_image' %}"
+    let url_add_image = "{% url 'attachments:add_image' %}"
     let images = JSON.parse(`{{images_s|escapejs}}`)
-    let page_images_app = new Vue({
-        el: "#page-images-app",
+    let images_app = new Vue({
+        el: "#images-app",
         data: {
-            add_page_image_form_title: "",
+            add_image_form_title: "",
             images: images,
 
-            add_page_image_form_file: '',
-            show_add_page_image_form: false,
+            add_image_form_file: '',
+            show_add_image_form: false,
             waiting: false,
             selected_image: images.length>0?images[0]:false,
         },
@@ -18,34 +18,34 @@
 
                     if (image.id == image_id) {
 
-                        page_images_app.selected_image = image
+                        images_app.selected_image = image
                     }
                 });
             },
-            add_page_image: function () {
-                page_images_app.waiting = true
-                let title = this.add_page_image_form_title
+            add_image: function () {
+                images_app.waiting = true
+                let title = this.add_image_form_title
                 let formData = new FormData();
-                let image = $('#add-page-image-form')[0].elements[1].files[0]
+                let image = $('#add-image-form')[0].elements[1].files[0]
                 formData.append("image", image);
                 formData.append("title", title);
                 formData.append("csrfmiddlewaretoken", csrfmiddlewaretoken);
                 formData.append("page_id", page_id);
                 $.ajax({
-                    url: url_add_page_image,
+                    url: url_add_image,
                     type: 'post',
                     data: formData,
                     contentType: false,
                     processData: false,
                     success: function (data) {
-                        page_images_app.waiting = false
+                        images_app.waiting = false
 
                         if (data != 0) {
                             if (data.result === 'SUCCEED') {
-                                page_images_app.images.push(data.page_image)
-                                page_images_app.add_page_image_form_title = ''
-                                page_images_app.add_page_image_form_file = ''
-                                page_images_app.show_add_page_image_form = false
+                                images_app.images.push(data.image)
+                                images_app.add_image_form_title = ''
+                                images_app.add_image_form_file = ''
+                                images_app.show_add_image_form = false
 
                             }
                         }
