amount for financial document line OK

--- a/accounting/templates/accounting/includes/financial-document-lines-app/script.html
+++ b/accounting/templates/accounting/includes/financial-document-lines-app/script.html
@@ -9,6 +9,9 @@
 </script>
 {% endif %}
 <script>
+    
+</script>
+<script>
 
     let financial_document_lines_app = new Vue({
         el: "#financial-document-lines-app",
