--- a/accounting/templates/accounting/includes/financial-event-app/card.html
+++ b/accounting/templates/accounting/includes/financial-event-app/card.html
@@ -1,11 +1,13 @@
 <div class="card">
-    {% load to_price %}
+  {% load to_price %}
+  <div class="card-header">
+    <h5>
+      {{financial_event.title}}
+    </h5>
+
+  </div>
   <div class="card-body">
-      {% include 'core/includes/page-app/card-contents.html' %}
-        <h5>
-          <small class="text-muted"> مانده :</small>
-          {{financial_event.sum_total|to_price}} {{CURRENCY}}</h5>
-        
-     
+
+    {% include 'accounting/includes/financial-event-app/card-contents.html' %}
   </div>
 </div>
