--- a/accounting/templates/accounting/includes/add-financial-document-app/script.html
+++ b/accounting/templates/accounting/includes/add-financial-document-app/script.html
@@ -1,3 +1,15 @@
 <script>
-    let aaa="sdsasdg"
+    let add_financial_document_app=new Vue({
+        el:"#add-financial-document-app",
+        data:{
+            financial_year_id:parseInt("{{current_financial_year_id}}"),
+            status:"",
+        },
+        methods:{
+            add_financial_document:function(){
+
+            }
+
+        },
+    })
 </script>
