brand added , remote clients added

--- a/accounting/templates/accounting/category.html
+++ b/accounting/templates/accounting/category.html
@@ -36,6 +36,11 @@
 
 
 {% block script %}
+
+<script>
+  let category_id=parseInt("{{category.id}} ")
+</script>
+
 {% include "accounting/includes/categories-app/script.html" %}
 
 
