--- a/accounting/templates/accounting/includes/add-product-app/template.html
+++ b/accounting/templates/accounting/includes/add-product-app/template.html
@@ -7,6 +7,16 @@
         <div v-show="show_form">
             <form @submit.prevent="add_product()">
                 <div class="row">
+                    <div class="col-md-12">
+                        <div class="form-group">
+                            <label for="">دسته بندی</label>
+                            <select class="form-control" v-model="category_id">
+                                {% for category in categories_for_add_product_app %}
+                                <option value="{{category.id}}">{{category.full_title}}</option>
+                                {% endfor %}
+                            </select>
+                        </div>
+                    </div>
                     <div class="col-md-4">
                         <div class="form-group">
                             <label for="">نام کالا</label>
@@ -56,7 +66,7 @@
                             <i class="fa fa-plus ml-2"></i>انصراف
                         </Button>
                         <div>
-                            <div v-if="message.show"  class="my-2">
+                            <div v-if="message.show" class="my-2">
                                 <div :class="'alert alert-'+message.color">
                                     <h5 v-html="message.title"></h5>
                                     <div v-html="message.body"></div>
