--- a/projectmanager/templates/projectmanager/includes/projects-app/template.html
+++ b/projectmanager/templates/projectmanager/includes/projects-app/template.html
@@ -2,13 +2,8 @@
   <div class="card" id="projects-app">
     <div class="card-header">
       <h5 class="text-center">
-        <button
-          class="btn btn-link"
-          data-toggle="collapse"
-          data-target="#collapse-projects"
-          aria-expanded="true"
-          aria-controls="collapse-projects"
-        >
+        <button class="btn btn-link" data-toggle="collapse" data-target="#collapse-projects" aria-expanded="true"
+          aria-controls="collapse-projects">
           پروژه ها
           <span v-if="projects.length>0">
             <small class="text-danger mx-2">
@@ -19,16 +14,12 @@
       </h5>
     </div>
 
-    <div
-      id="collapse-projects"
-      class="collapse {% if expand_projects %} show {% endif %}"
-      aria-labelledby="heading-projects"
-      data-parent="#accordion-projects"
-    >
+    <div id="collapse-projects" class="collapse {% if expand_projects %} show {% endif %}"
+      aria-labelledby="heading-projects" data-parent="#accordion-projects">
       <div class="card-body">
         <div class="table-responsive">
           <table class="table table-striped">
-            <thead> 
+            <thead>
               <th>نام پروژه</th>
 
               <th>کارفرما</th>
@@ -37,12 +28,22 @@
             </thead>
             <tbody>
               <tr v-for="project in projects">
-               
+
 
                 <td>
-                  <a :href="project.get_absolute_url">
-                    <span v-text="project.title"></span>
-                  </a>
+                  <div class="media">
+                    <a :href="project.get_absolute_url">
+                      <img :src="project.thumbnail" width="32" class="rounded" alt="">
+                    </a>
+                    <div class="media-body mr-2">
+                      <div>
+                        <a :href="project.get_absolute_url">
+                          <span v-text="project.title"></span>
+                        </a>
+                      </div>
+                    </div>
+                  </div>
+
                 </td>
 
                 <td>
@@ -62,21 +63,11 @@
                 </td>
 
                 <td>
-                  <a
-                    target="_blank"
-                    :href="project.get_edit_url"
-                    title="ویرایش"
-                    class="text-warning mx-2"
-                  >
+                  <a target="_blank" :href="project.get_edit_url" title="ویرایش" class="text-warning mx-2">
                     <i class="fa fa-edit text-warning"> </i>
                     ویرایش
                   </a>
-                  <a
-                    target="_blank"
-                    :href="project.get_delete_url"
-                    title="حذف"
-                    class="text-danger mx-2"
-                  >
+                  <a target="_blank" :href="project.get_delete_url" title="حذف" class="text-danger mx-2">
                     <i class="fa fa-trash text-danger"> </i>
                     حذف
                   </a>
