--- a/projectmanager/templates/projectmanager/project.html
+++ b/projectmanager/templates/projectmanager/project.html
@@ -1,13 +1,17 @@
 {% extends "projectmanager/layout.html" %} {% block content %}
 <div class="row rtl">
   <div class="col-md-3">
-        {% include "projectmanager/includes/project-app/card.html" %}
+    {% include "projectmanager/includes/project-app/card.html" %}
+    {% include "core/includes/page-thumbnail-header-app/template.html" %}
 
   </div>
   <div class="col-md-9">
     <div class="row rtl">
       <div class="col-md-12">
         {% include "attachments/includes/comments-app/template.html" %}
+      </div>
+      <div class="col-md-12">
+        {% include "attachments/includes/images-app/template.html" %}
       </div>
 
       <div class="col-md-6">
@@ -21,21 +25,34 @@
   </div>
 
   {% if add_invoice_form %}
-    <div class="col-md-6">
-        {% include "accounting/includes/add-invoice-app/template.html" %}
-    </div>
-    {% endif %}
-   
-    <div class="col-md-12 ">
-        {% include "accounting/includes/invoices-app/template.html" %}
-    </div>
+  <div class="col-md-12">
+    {% include "accounting/includes/add-invoice-app/template.html" %}
+  </div>
+  {% endif %}
+
+  <div class="col-md-12 ">
+    {% include "accounting/includes/invoices-app/template.html" %}
+  </div>
+
+  <div class="col-md-12">
+    {% include "projectmanager/includes/remote-clients-app/template.html" %}
+  </div>
 </div>
 
-{% endblock content %} {% block script %}
+{% endblock content %}
+
+
+{% block script %}
+<script>
+  let project_id=parseInt("{{project.id}} ")
+</script>
+
 {% if add_invoice_form %}
-        {% include "accounting/includes/add-invoice-app/script.html" %}
-    {% endif %}
-   
-        {% include "accounting/includes/invoices-app/script.html" %}
- {% include "core/includes/page-app/script.html" %}
-  {% endblock script %}
+{% include "accounting/includes/add-invoice-app/script.html" %}
+{% endif %}
+
+{% include "projectmanager/includes/remote-clients-app/script.html" %}
+
+{% include "accounting/includes/invoices-app/script.html" %}
+{% include "core/includes/page-app/script.html" %}
+{% endblock script %}
