--- a/accounting/templates/accounting/includes/products-app/list-template.html
+++ b/accounting/templates/accounting/includes/products-app/list-template.html
@@ -8,7 +8,7 @@
                 )</small>
         </h4>
     </div>
-    <div class="card-body">
+    <div class="card-body rtl">
         <div class="my-2">
             <input type="text" class="form-control" v-model="search_for" @input="filter()">
         </div>
