--- a/accounting/templates/accounting/includes/products-app/template.html
+++ b/accounting/templates/accounting/includes/products-app/template.html
@@ -18,7 +18,7 @@
 
     <div class="col-md-12 pt-4">
         <form @submit.prevent="add_product()">
-            <div class="row">
+            <div class="row rtl">
                 <div class="col">
 
                     <input placeholder="کالای جدید" class="form-control d-inline" required type="text" v-model="new_product_title">
