--- a/organization/templates/organization/includes/organization-units-app/template.html
+++ b/organization/templates/organization/includes/organization-units-app/template.html
@@ -1,18 +1,18 @@
-<div id="accordion-organizations" class="rtl text-right farsi">
-  <div class="card" id="organizations-app">
+<div id="accordion-organization-units" class="rtl text-right farsi">
+  <div class="card" id="organization-units-app">
     <div class="card-header">
       <h5 class="text-center">
         <button
           class="btn btn-link"
           data-toggle="collapse"
-          data-target="#collapse-organizations"
+          data-target="#collapse-organization-units"
           aria-expanded="true"
-          aria-controls="collapse-organizations"
+          aria-controls="collapse-organization-units"
         >
           سازمان ها
-          <span v-if="organizations.length>0">
+          <span v-if="organization_units.length>0">
             <small class="text-danger mx-2">
-              <span v-text="organizations.length"></span>
+              <span v-text="organization_units.length"></span>
             </small>
           </span>
         </button>
@@ -20,10 +20,10 @@
     </div>
 
     <div
-      id="collapse-organizations"
-      class="collapse {% if expand_organizations %} show {% endif %}"
-      aria-labelledby="heading-organizations"
-      data-parent="#accordion-organizations"
+      id="collapse-organization-units"
+      class="collapse {% if expand_organization_units %} show {% endif %}"
+      aria-labelledby="heading-organization-units"
+      data-parent="#accordion-organization-units"
     >
       <div class="card-body">
         <div class="table-responsive">
@@ -32,45 +32,30 @@
               <th>تاریخ</th>
               <th>نام سازمان</th>
 
-              <th>
-                مبلغ
-              </th>
-              <th>
-
-              </th>
+              <th>حساب</th>
+              <th></th>
             </thead>
             <tbody>
-              <tr v-for="organization in organizations">
-                <td>
-                </td>
+              <tr v-for="organization_unit in organization_units">
+                <td></td>
 
                 <td>
-                  <a :href="organization.get_absolute_url">
-                    <span v-text="organization.title"></span>
+                  <a :href="organization_unit.get_absolute_url">
+                    <span v-text="organization_unit.title"></span>
                   </a>
 
-                  <div>
-                    
-                  </div>
-
-                   <div>
-                     
-                  </div>
-
- 
+                  <div></div>
                 </td>
                 <td>
-                     
-                    <small>
-
-                        {{CURRENCY}}
-                    </small>
+                   <div v-for="account in [organization_unit.account]">
+                    {% include "accounting/includes/account-app/media.html" %}
+                   </div>
                 </td>
 
                 <td>
                   <a
                     target="_blank"
-                    :href="organization.get_edit_url"
+                    :href="organization_unit.get_edit_url"
                     title="ویرایش"
                     class="text-warning mx-2"
                   >
@@ -79,7 +64,7 @@
                   </a>
                   <a
                     target="_blank"
-                    :href="organization.get_delete_url"
+                    :href="organization_unit.get_delete_url"
                     title="حذف"
                     class="text-danger mx-2"
                   >
