--- a/organization/templates/organization/index.html
+++ b/organization/templates/organization/index.html
@@ -4,7 +4,7 @@
 {% block content %}
 <div class="row rtl farsi">
   <div class="col-6 col-md-3 col-lg-2 text-center my-3">
-    <a href="{% url 'organization:organizations' %}">
+    <a href="{% url 'organization:organization_units' %}">
       <img
         src="{% static 'chef/img/logo.png' %}"
         width="64em"
