--- a/warehouse/templates/warehouse/includes/add-warehouse-app/template.html
+++ b/warehouse/templates/warehouse/includes/add-warehouse-app/template.html
@@ -86,6 +86,63 @@
               </div>
             </div>
 
+
+
+                  <div class="col-md-12">
+              <div class="row">
+                 <div class="col-12">
+                  <div class="form-group">
+                    <label for="organization_unit_id">واحد سازمانی</label>
+                    <select
+                      type="number"
+                      placeholder=""
+                      class="form-control"
+                      id="organization_unit_id" 
+                      v-model="organization_unit.id"
+                    >
+                  {% for organization_unit in organization_units %}
+                    <option value="{{organization_unit.id}}">{{organization_unit.title}}</option>
+                  {% endfor %}
+                  </select>
+                  </div>
+                </div>
+
+                <div class="col-6">
+                  <div class="form-group">
+                    <label for="organization_unit_id">واحد سازمانی</label>
+                    <input
+                      type="number"
+                      placeholder=""
+                      class="form-control"
+                      id="organization_unit_id"
+                      @input="select_organization_unit()"
+                      v-model="organization_unit.id"
+                    />
+                  </div>
+                </div>
+
+                <div class="col-6 mt-3">
+                  <a :href="organization_unit.get_absolute_url" v-if="organization_unit.id">
+                    <div class="media">
+                      <img :src="organization_unit.logo" width="64" alt="" />
+                      <div class="mr-2 media-body">
+                        
+                        <span v-text="organization_unit.title">
+
+                        </span>
+
+                        
+                      </div>
+                    </div>
+                  </a>
+                  <div v-if="!organization_unit.id">
+                    <h5 class="text-danger">حساب انتخاب نشده است.</h5>
+                  </div>
+                </div>
+              </div>
+            </div>
+
+
             <div class="col-md-4"></div>
 
             <div class="col-md-12">
